--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -2,15 +2,15 @@ name: Deploy to staging
 
 on:
   pull_request:
-    types: [labeled] 
+    types: [labeled]
 
 env:
   IMAGE_REGISTRY_URL: ghcr.io
   ###############################################
   ### Replace <username> with GitHub username ###
   ###############################################
-  DOCKER_IMAGE_NAME: DarielPereira-azure-ttt
-  AZURE_WEBAPP_NAME: DarielPereira-ttt-app
+  DOCKER_IMAGE_NAME: <username>-azure-ttt
+  AZURE_WEBAPP_NAME: <username>-ttt-app
   ###############################################
 
 jobs:
