--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -72,7 +72,7 @@ jobs:
     needs: Build-Docker-Image
     name: Deploy app container to Azure
     steps:
-      - name: "Login via Azure CLI"
+      - name: Login via Azure CLI
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
